add gc g1